melhorias de login e criação de conta, feito também melhorias em demais campos

--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "4fe39a7b-ccd1-4c85-9e54-5c20cb656e79"
   }
 }
